--- a/index.html
+++ b/index.html
@@ -2,15 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
- 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ramtech</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Iceland&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/ram.jpg" />
+
+    <!-- Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Page Title -->
+    <title>RamTech | Empowering Youth with Digital Skills</title>
+
+    <!-- SEO Meta -->
+    <meta name="description" content="RamTech is a youth-driven tech startup building real-world web, AI, and mobile solutions while empowering students with digital skills." />
+    <meta name="keywords" content="RamTech, Tech Startup, Web Development, AI, Mobile Apps, Malawi, Youth Empowerment" />
+    <meta name="author" content="RamTech Team" />
+
+    <!-- Open Graph (for Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="RamTech | Empowering Youth with Digital Skills" />
+    <meta property="og:description" content="Building real-world web, AI, and mobile solutions while empowering students with digital skills." />
+    <meta property="og:image" content="/ram.jpg" /> <!-- replace with your logo or hero image -->
+    <meta property="og:url" content="https://ram-tech.netlify.app" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="RamTech | Empowering Youth with Digital Skills" />
+    <meta name="twitter:description" content="Building real-world web, AI, and mobile solutions while empowering students with digital skills." />
+    <meta name="twitter:image" content="/ram.jpg" /> <!-- replace with your logo or hero image -->
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Iceland&display=swap" rel="stylesheet">
 
   </head>
   <body>
